--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Rammetto+One&display=swap');
 
-* {
+body {
     font-family: "Mukta Vaani", sans-serif;
     background-color: #FAF8EB;
 }
@@ -42,16 +42,23 @@
     width: 100%; 
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    opacity: 0;  
     position: absolute;
 }
-
-.BannerConteudo h2 {
-    color: white;
-    font-size: 30px;
-}
+        .TextoBanner {
+            padding-left: 40px;
+        }
+        .BannerConteudo h2 {
+            color: white;
+            font-size: 70px;
+            line-height: 0;
+        }
+        .BannerConteudo p {
+            line-height: 30px;
+            color: white;
+            font-size: 30px;
+        }
 
 .Titulo {
     font-family: "Rammetto One", sans-serif;
@@ -64,27 +71,6 @@
     gap: 180px;
     margin-top: 30px;
 }
-/* 
-.bolinha {
-    width: 100px; 
-    height: 100px; 
-    border-radius: 100%; 
-    cursor: pointer; 
-    transition:ease-in-out all 0.3s;
-}
-        .bolinha:hover {
-            width: 100px; 
-            height: 200px; 
-            border-radius: 100%; 
-        }
- */
-
-.categoriashome {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
-}
 
 .bolinha {
     width: 100px; 
@@ -94,29 +80,25 @@
     position: relative;
     transition: ease-in-out all 0.3s;
 }
+        .bolinha.active {
+            height: 200px; 
+        }
 
-.bolinha.active {
-    height: 200px; 
-}
+        .categ-dropdown {
+            background-color: inherit; 
+            width: 1200px;
+            position: absolute;
+            bottom: -40px;  
+            display: none; 
+            padding: 15px;
+            border-radius: 0 8px 8px 8px;
+            color: white;  
+            font-size: 16px;
+        }
 
-.categ-dropdown {
-    background-color: currentColor; 
-    width: 100%;
-    position: absolute;
-    bottom: -60px;  
-    left: 0;
-    display: none; 
-    padding: 10px;
-    border-radius: 8px;
-    text-align: center;
-    color: white;  
-    font-size: 16px;
-}
-
-.bolinha.active .categ-dropdown {
-    display: block;
-}
-
+        .bolinha.active .categ-dropdown {
+            display: block;
+        }
 
 
 /* fonte da logo/detalhes */
