--- a/CSS/adocao.css
+++ b/CSS/adocao.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    justify-self: center;
+    justify-content: center;
   }
 
 .adocao-card {
