novas paginas + detalhes drop home

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -112,10 +112,10 @@ body {
             border-right: 15px solid transparent;
             border-bottom: 15px solid #B2B53A;
         }
+        .categ-dropdown p{
+            margin-left: 30px;
+        }
 
-        
-
-  
 
 
 /* fonte da logo/detalhes */
