--- a/CSS/sobrenos.css
+++ b/CSS/sobrenos.css
@@ -5,10 +5,11 @@
 
 .texto-sobrenos {
     flex: 1;
-    padding: 60px;
+    padding: 50px;
     background-color: #e3e770;
     border-bottom-right-radius: 20px;
     color: #333;
+    max-height: 300px;
 }
         .texto-sobrenos .Titulo {
             margin-left: 0;
@@ -25,6 +26,7 @@
 .imagem-sobrenos {
     flex: 1;
     overflow: hidden;
+    max-height: 400px;
 }
         .imagem-sobrenos img {
             width: 100%;
