--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -1,27 +1,31 @@
   .container-contato {
     display: flex;
+    background-color: #F26B5E;
   }
   
   .imagem-contato {
     flex: 1;
-    background-size: cover;
-    width: 500px;
+    height: 580px;
   }
+      .imagem-contato img {
+        height: 90%;
+        object-fit: cover;
+        margin-top: 20px;
+        margin-left: 70%;
+    }
   
   .formulario-contato {
     flex: 1;
     background-color: #F2EFBD;
-    padding: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 500px;
-    min-width: 200px;
+    padding: 40px;
+    justify-items: center;
+    max-height: 500px;
+    border-bottom-left-radius: 20px;
   }
         .formulario-contato .Titulo {
             margin-left: 0;
-            font-size: 30px;
-            margin-bottom: 30px;
+            font-size: 2vw;
+            margin-bottom: 40px;
             color: #365914;
         }
         .formulario-contato input,
@@ -32,6 +36,7 @@
             border: 0;
             border-radius: 20px;
             width: 100%;
+            max-width: 700px;
         }
   
 
@@ -40,7 +45,7 @@
     font-size: 17px;
     border: 1px solid #7cc33f;
     color: #7cc33f;
-    padding: 6px 15px;
+    padding: 8px 20px;
     margin-bottom: 15px;
     border-radius: 20px;
     cursor: pointer;
@@ -59,6 +64,7 @@
     background-color: white;
     margin: 50px auto;
     width: 80vw;
+    height: 22vw;
     max-width: 1200px;
     border-radius: 16px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
