--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,9 +3,9 @@
     flex-direction: row;
     justify-content: center; 
     gap: 20px;
-    margin: 20px 0; 
+    margin: 10px 0; 
 }
-.BotoesHome button{
+.BotoesHome a{
     background-color: #D4D955 !important;
     border: 0;
     border-radius: 8px;
@@ -13,10 +13,14 @@
     height: 50px;
     font-size: 17px;
     cursor: pointer;
-    margin-top: 20px;
+    margin: 30px 0;
     transition: background-color 0.3s;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    align-content: center;
 }
-        .BotoesHome button:hover {
+        .BotoesHome a:hover {
             background-color: #B2B53A !important; 
         }
 
@@ -53,7 +57,7 @@
             font-size: 30px;
         }
         .BannerDog {
-            margin-top: 20px;
+            margin-top: 90px;
         }
 
 
@@ -86,18 +90,18 @@
     z-index: 1;
     transition: all 0.3s ease;
   }
-        /* triangulo q conecta a bolinha com o bloco */
+        /* TRIÂNGULO QUE VAI SE MOVER */
         .categ-dropdown::before {
             content: "";
             position: absolute;
             top: -15px;
-            left: 40px;
+            left: var(--triangulo-left, 40px);
             width: 0px;
             height: 0px;
             z-index: -1;
             border-left: 15px solid transparent;
             border-right: 15px solid transparent;
-            border-bottom: 15px solid var(--triangulo-color);
+            border-bottom: 15px solid var(--triangulo-color, #333);
             transition: all 0.3s ease;
         }
         .categ-dropdown p{
