--- a/CSS/adocao.css
+++ b/CSS/adocao.css
@@ -1,9 +1,13 @@
   #adocao-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
   }
+
+.adocaoTit {
+  margin-top: 100px;
+}
 
 .adocao-card {
     display: flex;
