--- a/CSS/adestramento.css
+++ b/CSS/adestramento.css
@@ -9,6 +9,8 @@
     margin-top: 100px;
     font-size: 2rem;
     font-weight: bold;
+    color: #365914;
+    margin-bottom: 40px;
   }
   
   .adestramento-card {
