--- a/CSS/adocao.css
+++ b/CSS/adocao.css
@@ -1,4 +1,22 @@
-  #adocao-container {
+.filtros {
+  text-align: center;
+  margin-bottom: 40px;
+}
+      .filtro-input {
+          padding: 10px;
+          width: 250px;
+          border: 0;
+          border-radius: 20px 0 0 20px;
+      }
+      .filtro-select {
+          padding: 10px;
+          width: 170px;
+          border: 0;
+          border-radius: 0 20px 20px 0;
+          background-color: #D4D955;
+      }
+
+#adocao-container {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
