--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -1,3 +1,22 @@
+.filtros {
+    text-align: center;
+    margin-bottom: 40px;
+}
+        .filtro-input {
+            padding: 10px;
+            width: 250px;
+            border: 0;
+            border-radius: 20px 0 0 20px;
+        }
+        .filtro-select {
+            padding: 10px;
+            width: 170px;
+            border: 0;
+            border-radius: 0 20px 20px 0;
+            background-color: #D4D955;
+        }
+
+
 .produtos-container {
     display: flex;
     flex-wrap: wrap;
@@ -7,6 +26,7 @@
   }
   .prodtitulo {
     margin-top: 100px;
+    color: #365914;
   }
 
 .prod-card {
