--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,24 +5,26 @@
     gap: 20px;
     margin: 10px 0; 
 }
-.BotoesHome a{
-    background-color: #D4D955 !important;
-    border: 0;
-    border-radius: 8px;
-    width: 250px;
-    height: 50px;
-    font-size: 17px;
-    cursor: pointer;
-    margin: 30px 0;
-    transition: background-color 0.3s;
-    color: black;
-    text-decoration: none;
-    text-align: center;
-    align-content: center;
-}
-        .BotoesHome a:hover {
-            background-color: #B2B53A !important; 
+
+        .BotoesHome a{
+            background-color: #D4D955 !important;
+            border: 0;
+            border-radius: 8px;
+            width: 250px;
+            height: 50px;
+            font-size: 17px;
+            cursor: pointer;
+            margin: 30px 0;
+            transition: background-color 0.3s;
+            color: black;
+            text-decoration: none;
+            text-align: center;
+            align-content: center;
         }
+
+            .BotoesHome a:hover {
+                background-color: #B2B53A !important; 
+            }
         
 
 .BannerConteiner {
@@ -36,8 +38,9 @@
     align-items: center;
 }
 
+/* ESSENCIAL! Ele esconde os banners que não estão ativos */
 .BannerFrame {
-    overflow: hidden; /* ESSENCIAL! Ele esconde os banners que não estão ativos */
+    overflow: hidden;
 }
 
 .BannerSlider {
@@ -54,7 +57,6 @@
     flex-shrink: 0;
     padding: 0;
 }
-        
         .TextoBanner {
             padding-left: 40px;
         }
@@ -64,7 +66,6 @@
             font-size: 70px;
             line-height: 0;
         }
-        
         .BannerConteudo p {
             line-height: 30px;
             color: white;
@@ -74,13 +75,11 @@
         .BannerDog {
             margin-top: 90px;
         }
-        
         .BannerCat {
-            margin-top: 80px;
+            margin-top: 100px;
         }
-        
         .BannerDog2 {
-            margin-top: 96px;
+            margin-top: 115px;
             width: 600px;
         }
                 
