--- a/CSS/veterinarios.css
+++ b/CSS/veterinarios.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 50px;
   }
   
   .card-vet {
@@ -27,10 +27,16 @@
   }
   
   .vet-especialidade {
+    padding: 40px 30px;
+    width: 100%;
+    display: flex;
+    gap: 30px;
+  }
+  .vet-especialidade img{
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    margin: 40px 30px;
+    margin-top: 10px;
   }
   
 
