--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -101,3 +101,75 @@
             font-size: 16px;
         }
         
+
+  .valores-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.valor-card {
+    width: 250px;
+    padding: 20px;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    text-align: center;
+}
+
+        .valor-card:hover {
+            transform: translateY(-8px);
+        }
+
+        .valor-card h3 {
+            margin-bottom: 10px;
+            font-size: 1.3rem;
+        }
+
+        .valor-card p {
+            font-size: 1rem;
+            font-weight: normal;
+        }
+
+
+.sobrenos-button {
+    padding: 8px 15px;
+    margin-top: 10px;
+    border: 1.5px solid #71AB3E;
+    border-radius: 20px;
+    background-color: transparent;
+    color: #71AB3E;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    align-self: flex-start;
+    text-decoration: none;
+  }
+      .sobrenos-button:hover {
+        background-color: #71AB3E;
+        color: white;
+      }
+
+
+.card-doacao {
+    margin: 30px 0;
+    padding: 30px;
+    width: 50vw;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    display: flex;
+    gap: 5%;
+    text-align: start;
+
+    /* quadriculado do card */
+    --color: #e2e2e2;    /* cor das linhas */
+    background-color: #f8f8f8;    /* cor do fundo */
+    background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
+        linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+    background-size: 55px 55px;
+}
