--- a/CSS/contato.css
+++ b/CSS/contato.css
@@ -1,21 +1,27 @@
-  .container-contato {
-    display: flex;
-    background-color: #F26B5E;
+.container-contato {
+      display: flex;
+      background-color: #F26B5E;
+      position: relative; 
   }
+
   
   .imagem-contato {
     flex: 1;
     height: 580px;
   }
       .imagem-contato img {
-        height: 90%;
+        position: absolute; /* Retira a imagem do fluxo normal */
+        height: 90%; /* Mantém a altura proporcional */
+        max-width: 50%; /* Limita a largura para evitar que cubra todo o formulário */
         object-fit: cover;
-        margin-top: 20px;
-        margin-left: 70%;
+        left: 33.4%;
+        z-index: 10; /* Garante que a imagem fique acima do formulário */
+  
     }
   
   .formulario-contato {
     flex: 1;
+    z-index: 5;
     background-color: #F2EFBD;
     padding: 40px;
     justify-items: center;
