--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,33 +1,33 @@
 .BotoesHome {
-    display: flex; 
+    display: flex;
     flex-direction: row;
-    justify-content: center; 
+    justify-content: center;
     gap: 20px;
-    margin: 10px 0; 
+    margin: 10px 0;
 }
 
-        .BotoesHome a{
-            background-color: #D4D955 !important;
-            border: 0;
-            border-radius: 8px;
-            width: 250px;
-            height: 50px;
-            font-size: 17px;
-            cursor: pointer;
-            margin: 30px 0;
-            transition: background-color 0.3s;
-            color: black;
-            text-decoration: none;
-            text-align: center;
-            align-content: center;
-            z-index: 11 !important;
-        }
+.BotoesHome a {
+    background-color: #D4D955 !important;
+    border: 0;
+    border-radius: 8px;
+    width: 250px;
+    height: 50px;
+    font-size: 17px;
+    cursor: pointer;
+    margin: 30px 0;
+    transition: background-color 0.3s;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    align-content: center;
+    z-index: 11 !important;
+}
 
-            .BotoesHome a:hover {
-                background-color: #B2B53A !important; 
-                z-index: 11 !important;
-            }
-        
+.BotoesHome a:hover {
+    background-color: #B2B53A !important;
+    z-index: 11 !important;
+}
+
 
 .BannerConteiner {
     background-color: #F26B5E;
@@ -50,7 +50,7 @@
 .BannerSlider {
     display: flex;
     transition: transform 2s ease-in-out;
-    width: 100%; 
+    width: 100%;
 }
 
 .BannerConteudo {
@@ -62,32 +62,36 @@
     flex-shrink: 0;
     padding: 0;
 }
-        .TextoBanner {
-            padding-left: 40px;
-        }
-        
-        .BannerConteudo h2 {
-            color: white;
-            font-size: 70px;
-            line-height: 0;
-        }
-        .BannerConteudo p {
-            line-height: 30px;
-            color: white;
-            font-size: 30px;
-        }
-        
-        .BannerDog {
-            margin-top: 90px;
-        }
-        .BannerCat {
-            margin-top: 100px;
-        }
-        .BannerDog2 {
-            margin-top: 115px;
-            width: 600px;
-        }
-                
+
+.TextoBanner {
+    padding-left: 40px;
+}
+
+.BannerConteudo h2 {
+    color: white;
+    font-size: 70px;
+    line-height: 0;
+}
+
+.BannerConteudo p {
+    line-height: 30px;
+    color: white;
+    font-size: 30px;
+}
+
+.BannerDog {
+    margin-top: 90px;
+}
+
+.BannerCat {
+    margin-top: 100px;
+}
+
+.BannerDog2 {
+    margin-top: 115px;
+    width: 600px;
+}
+
 
 
 .categoriashome {
@@ -96,18 +100,18 @@
     gap: 180px;
     margin-top: 30px;
     position: relative;
-  }
-  
-  .bolinha {
-    width: 100px; 
+}
+
+.bolinha {
+    width: 100px;
     height: 100px;
     border-radius: 100%;
     cursor: pointer;
     position: relative;
     transition: ease-in-out all 0.3s;
-  }
-  
-  .categ-dropdown {
+}
+
+.categ-dropdown {
     width: 90vw;
     margin: 30px auto;
     padding: 30px 0;
@@ -118,24 +122,26 @@
     display: none;
     z-index: 1;
     transition: all 0.3s ease;
-  }
-        /* TRIÂNGULO QUE VAI SE MOVER */
-        .categ-dropdown::before {
-            content: "";
-            position: absolute;
-            top: -15px;
-            left: var(--triangulo-left, 40px);
-            width: 0px;
-            height: 0px;
-            z-index: -1;
-            border-left: 15px solid transparent;
-            border-right: 15px solid transparent;
-            border-bottom: 15px solid var(--triangulo-color, #333);
-            transition: all 0.3s ease;
-        }
-        .categ-dropdown p{
-            margin-left: 30px;
-        }
+}
+
+/* TRIÂNGULO QUE VAI SE MOVER */
+.categ-dropdown::before {
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: var(--triangulo-left, 40px);
+    width: 0px;
+    height: 0px;
+    z-index: -1;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 15px solid var(--triangulo-color, #333);
+    transition: all 0.3s ease;
+}
+
+.categ-dropdown p {
+    margin-left: 30px;
+}
 
 /* Estilo para o contêiner dos links no dropdown */
 .dropdown-links {
@@ -147,13 +153,15 @@
 
 /* Estilo para o nome da categoria */
 .categoria-nome {
-    color: inherit; /* Herda a cor do dropdown */
+    color: inherit;
+    /* Herda a cor do dropdown */
     font-size: 16px;
 }
 
 /* Estilo para o link principal ("Ver produtos de [animal]") */
 .main-link {
-    color: inherit; /* Herda a cor do dropdown */
+    color: inherit;
+    /* Herda a cor do dropdown */
     text-decoration: none;
     font-size: 16px;
 }
@@ -167,7 +175,8 @@
 
 /* Estilo para os links de subcategorias */
 .subcat-link {
-    color: inherit; /* Herda a cor do dropdown */
+    color: inherit;
+    /* Herda a cor do dropdown */
     text-decoration: none;
     font-size: 16px;
     transition: opacity 0.2s;
@@ -175,4 +184,105 @@
 
 .subcat-link:hover {
     opacity: 0.8;
+}
+
+
+.principalContent {
+    background-color: #F2EFBD !important;
+    width: 100%;
+    height: 140px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 120%;
+
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+}
+
+
+.links a {
+    text-decoration: none;
+    position: relative;
+    color: #365914;
+    margin: 18px 0 10px 28px;
+    font-size: 22px;
+    transition: color 0.6s ease;
+}
+
+.links a::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: -3px;
+    background-color: #F26B5E;
+    transition: width 0.6s ease;
+}
+
+.links a:hover::after {
+    width: 100%;
+}
+
+.redes {
+    display: flex;
+    justify-content: center;
+}
+
+.redes h3 {
+    text-decoration: none;
+    color: #365914;
+    margin-left: 10px;
+    margin-top: 6px;
+    font-size: 22px;
+}
+
+.redes a {
+    margin-left: 20px;
+    transition: all 1s;
+}
+
+.redes a:hover {
+    transform: scale(1.1);
+}
+
+.line {
+    background-color: white;
+    height: 10px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 140%;
+
+}
+
+.subContent {
+    background-color: #71AB3E !important;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 140%;
+}
+
+
+.subContent p {
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+}
+
+.subContent h6 {
+    margin-top: -10px;
+    font-size: 14px;
+    text-align: center;
+    color: white;
 }
