--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -2,19 +2,21 @@
     text-align: center;
     margin-bottom: 40px;
 }
-        .filtro-input {
-            padding: 10px;
-            width: 250px;
-            border: 0;
-            border-radius: 20px 0 0 20px;
-        }
-        .filtro-select {
-            padding: 10px;
-            width: 170px;
-            border: 0;
-            border-radius: 0 20px 20px 0;
-            background-color: #D4D955;
-        }
+
+.filtro-input {
+    padding: 10px;
+    width: 250px;
+    border: 0;
+    border-radius: 20px 0 0 20px;
+}
+
+.filtro-select {
+    padding: 10px;
+    width: 170px;
+    border: 0;
+    border-radius: 0 20px 20px 0;
+    background-color: #D4D955;
+}
 
 
 .produtos-container {
@@ -23,17 +25,18 @@
     gap: 30px;
     justify-content: center;
     align-items: flex-start;
-  }
-  .prodtitulo {
+}
+
+.prodtitulo {
     margin-top: 100px;
     color: #365914;
-  }
+}
 
 .prod-card {
     width: 250px;
     background: #fff;
     border-radius: 12px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: all 0.3s ease;
 }
@@ -48,10 +51,11 @@
     line-height: 1;
     font-size: 20px;
 }
-        .subtit-prod {
-            color: #999;
-            line-height: 5px;
-        }
+
+.subtit-prod {
+    color: #999;
+    line-height: 5px;
+}
 
 .img-prod {
     margin-top: 10px;
@@ -61,18 +65,20 @@
 .preco-prod {
     margin: 8px 0;
 }
-        .preco-antigo {
-            text-decoration: line-through;
-            color: #999;
-            font-size: 14px;
-            display: block;
-            line-height: 10px;
-        }
-        .preco-novo {
-            font-weight: bold;
-            font-size: 20px;
-        }
-  
+
+.preco-antigo {
+    text-decoration: line-through;
+    color: #999;
+    font-size: 14px;
+    display: block;
+    line-height: 10px;
+}
+
+.preco-novo {
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .detalhes-prod {
     opacity: 0;
     max-height: 0;
@@ -89,18 +95,21 @@
     border-radius: 14px;
     padding: 0 15px;
 }
-        .tabela-prod .linha {
-            display: flex;
-            justify-content: space-between;
-            padding: 8px 0;
-            border-bottom: 1px solid #ccc;
-        }
-        .tabela-prod .linha:last-child {
-            border-bottom: none;
-        }
-        .tabela-prod .titulo {
-            font-weight: 700;
-        }
+
+.tabela-prod .linha {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.tabela-prod .linha:last-child {
+    border-bottom: none;
+}
+
+.tabela-prod .titulo {
+    font-weight: 700;
+}
 
 
 .btn-prod {
@@ -114,12 +123,115 @@
     cursor: pointer;
     font-weight: bold;
     transition: background 0.3s;
-} 
-        .btn-prod:hover {
-            background: #7cc33f;
-            color: #fff;
-        }
-        .detalhes-prod.aberto {
-            opacity: 1;
-            max-height: 1000px;
-        }        
+}
+
+.btn-prod:hover {
+    background: #7cc33f;
+    color: #fff;
+}
+
+.detalhes-prod.aberto {
+    opacity: 1;
+    max-height: 1000px;
+}
+
+
+.principalContent {
+    background-color: #F2EFBD !important;
+    width: 100%;
+    height: 140px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 120%;
+
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+}
+
+
+.links a {
+    text-decoration: none;
+    position: relative;
+    color: #365914;
+    margin: 18px 0 10px 28px;
+    font-size: 22px;
+    transition: color 0.6s ease;
+}
+
+.links a::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: -3px;
+    background-color: #F26B5E;
+    transition: width 0.6s ease;
+}
+
+.links a:hover::after {
+    width: 100%;
+}
+
+.redes {
+    display: flex;
+    justify-content: center;
+}
+
+.redes h3 {
+    text-decoration: none;
+    color: #365914;
+    margin-left: 10px;
+    margin-top: 6px;
+    font-size: 22px;
+}
+
+.redes a {
+    margin-left: 20px;
+    transition: all 1s;
+}
+
+.redes a:hover {
+    transform: scale(1.1);
+}
+
+.line {
+    background-color: white;
+    height: 10px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 140%;
+
+}
+
+.subContent {
+    background-color: #71AB3E !important;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 140%;
+}
+
+
+.subContent p {
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+}
+
+.subContent h6 {
+    margin-top: -10px;
+    font-size: 14px;
+    text-align: center;
+    color: white;
+}
