--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -135,17 +135,16 @@
     max-height: 1000px;
 }
 
-
-.principalContent {
-    background-color: #F2EFBD !important;
-    width: 100%;
-    height: 140px;
+footer {
     position: absolute;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
-    top: 120%;
-
+    top: 240%;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    bottom: 0;
+    width: 100%;
+    background-color: #F2EFBD !important;
+    height: 140px;
 }
 
 .links {
@@ -203,11 +202,11 @@
 .line {
     background-color: white;
     height: 10px;
-    position: absolute;
+    position: relative;
     bottom: 0%;
     left: 0%;
     right: 0%;
-    top: 140%;
+    top: 0%;
 
 }
 
@@ -219,7 +218,7 @@
     bottom: 0%;
     left: 0%;
     right: 0%;
-    top: 140%;
+    top: 100%;
 }
 
 
