--- a/CSS/quiz.css
+++ b/CSS/quiz.css
@@ -9,7 +9,7 @@ body {
     padding: 20px;
 }
 
-h1 { 
+h1 {
     text-align: center;
 }
 
@@ -19,7 +19,7 @@ h1 {
     height: 25%;
     margin-bottom: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .question p {
@@ -79,7 +79,7 @@ button.selected {
 
 .result {
     display: flex;
-    flex-direction: row !important; 
+    flex-direction: row !important;
     align-items: flex-start;
     gap: 20px;
     padding: 15px;
@@ -101,26 +101,126 @@ button.selected {
 }
 
 .result-btn-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  margin-top: 20px;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 
 .result-btn {
-  background-color: #F26B5E;
-  color: white;
-  border: none;
-  padding: 12px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 8px;
-  transition: background-color 0.3s ease;
-  align-self: center; 
+    background-color: #F26B5E;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    align-self: center;
 }
 
 .result-btn:hover {
-  background-color: #f35446;
+    background-color: #f35446;
+}
+
+footer {
+    position: absolute;
+    top: 90%;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    bottom: 0;
+    width: 100%;
+    background-color: #F2EFBD !important;
+    height: 140px;
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+}
+
+
+.links a {
+    text-decoration: none;
+    position: relative;
+    color: #365914;
+    margin: 18px 0 10px 28px;
+    font-size: 22px;
+    transition: color 0.6s ease;
+}
+
+.links a::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: -3px;
+    background-color: #F26B5E;
+    transition: width 0.6s ease;
+}
+
+.links a:hover::after {
+    width: 100%;
+}
+
+.redes {
+    display: flex;
+    justify-content: center;
+}
+
+.redes h3 {
+    text-decoration: none;
+    color: #365914;
+    margin-left: 10px;
+    margin-top: 6px;
+    font-size: 22px;
+}
+
+.redes a {
+    margin-left: 20px;
+    transition: all 1s;
+}
+
+.redes a:hover {
+    transform: scale(1.1);
+}
+
+.line {
+    background-color: white;
+    height: 10px;
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+
+}
+
+.subContent {
+    background-color: #71AB3E !important;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 100%;
+}
+
+
+.subContent p {
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+}
+
+.subContent h6 {
+    margin-top: -10px;
+    font-size: 14px;
+    text-align: center;
+    color: white;
 }
