--- a/CSS/sobrenos.css
+++ b/CSS/sobrenos.css
@@ -15,28 +15,31 @@
     color: #333;
     max-height: 300px;
 }
-        .texto-sobrenos .Titulo {
-            margin-left: 0;
-            font-size: 36px;
-            color: #365914;
-            margin-bottom: 20px;
-        }
-        .texto-sobrenos p {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-        
+
+.texto-sobrenos .Titulo {
+    margin-left: 0;
+    font-size: 36px;
+    color: #365914;
+    margin-bottom: 20px;
+}
+
+.texto-sobrenos p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
 .imagem-sobrenos {
     flex: 1;
     overflow: hidden;
     max-height: 400px;
 }
-        .imagem-sobrenos img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+
+.imagem-sobrenos img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 
@@ -49,12 +52,13 @@
     margin: 40px;
 }
 
-.historia-left, .historia-right {
+.historia-left,
+.historia-right {
     flex: 1 1 400px;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
 }
 
 .historia-left img {
@@ -71,23 +75,23 @@
     align-items: center;
 }
 
-        .historia-box img {
-            width: 120px;
-            height: 120px;
-            object-fit: cover;
-            border-radius: 12px;
-            flex-shrink: 0;
-        }
+.historia-box img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 12px;
+    flex-shrink: 0;
+}
 
-        .historia-box h3 {
-            margin: 0 0 5px;
-        }
+.historia-box h3 {
+    margin: 0 0 5px;
+}
 
-        .historia-box p {
-            margin: 0;
-            font-size: 1rem;
-            color: #444;
-        }
+.historia-box p {
+    margin: 0;
+    font-size: 1rem;
+    color: #444;
+}
 
 
 
@@ -110,19 +114,19 @@
     text-align: center;
 }
 
-        .valor-card:hover {
-            transform: translateY(-8px);
-        }
+.valor-card:hover {
+    transform: translateY(-8px);
+}
 
-        .valor-card h3 {
-            margin-bottom: 10px;
-            font-size: 1.3rem;
-        }
+.valor-card h3 {
+    margin-bottom: 10px;
+    font-size: 1.3rem;
+}
 
-        .valor-card p {
-            font-size: 1rem;
-            font-weight: normal;
-        }
+.valor-card p {
+    font-size: 1rem;
+    font-weight: normal;
+}
 
 
 .sobrenos-button {
@@ -137,11 +141,12 @@
     transition: all 0.3s ease;
     align-self: flex-start;
     text-decoration: none;
-  }
-      .sobrenos-button:hover {
-        background-color: #71AB3E;
-        color: white;
-      }
+}
+
+.sobrenos-button:hover {
+    background-color: #71AB3E;
+    color: white;
+}
 
 
 .card-doacao {
@@ -156,9 +161,111 @@
     text-align: start;
 
     /* quadriculado do card */
-    --color: #e2e2e2;    /* cor das linhas */
-    background-color: #f8f8f8;    /* cor do fundo */
-    background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
-        linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+    --color: #e2e2e2;
+    /* cor das linhas */
+    background-color: #f8f8f8;
+    /* cor do fundo */
+    background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent),
+        linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent);
     background-size: 55px 55px;
+}
+
+footer {
+    position: absolute;
+    top: 170%;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    bottom: 0;
+    width: 100%;
+    background-color: #F2EFBD !important;
+    height: 140px;
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+}
+
+
+.links a {
+    text-decoration: none;
+    position: relative;
+    color: #365914;
+    margin: 18px 0 10px 28px;
+    font-size: 22px;
+    transition: color 0.6s ease;
+}
+
+.links a::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: -3px;
+    background-color: #F26B5E;
+    transition: width 0.6s ease;
+}
+
+.links a:hover::after {
+    width: 100%;
+}
+
+.redes {
+    display: flex;
+    justify-content: center;
+}
+
+.redes h3 {
+    text-decoration: none;
+    color: #365914;
+    margin-left: 10px;
+    margin-top: 6px;
+    font-size: 22px;
+}
+
+.redes a {
+    margin-left: 20px;
+    transition: all 1s;
+}
+
+.redes a:hover {
+    transform: scale(1.1);
+}
+
+.line {
+    background-color: white;
+    height: 10px;
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+
+}
+
+.subContent {
+    background-color: #71AB3E !important;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
+    top: 100%;
+}
+
+
+.subContent p {
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+}
+
+.subContent h6 {
+    margin-top: -10px;
+    font-size: 14px;
+    text-align: center;
+    color: white;
 }
